--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <div class="row">
             <div class="col-12">
                 <!-- Enter each persons name in place of the "Insert Name Here" below -->
-                <h5>1</h5>
-
-            
+                <h5>Andres Gomez</h5>
+                <h5>Jose Castañeda</h5>
+                <h5>Julieth Vela</h5>
+                <h5>Marlon Quintero</h5> 
             </div> 
         </div>
         <br>
@@ -54,7 +55,7 @@
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="" class="img-thumbnail">
+                <img src="Pictures/b-beans.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -80,7 +81,7 @@
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
-                <img src="https://images.unsplash.com/photo-1560987617-6de57e3d0574?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1738&q=80" class="img-thumbnail">
+                <img src="Pictures/d-duck.jpg" class="img-thumbnail"  width="500" height="auto">
             </div>
         </div>
         <hr>
@@ -90,11 +91,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">E</h1>
-                <h3>For Elephan</h3>
+                <h3>For Elephant</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="photos/E- Elephan.jpg" class="img-thumbnail">
+                <img src="Pictures/E- Elephan.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -104,11 +105,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">F</h1>
-                <h3>For </h3>
+                <h3>For Frog </h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="" class="img-thumbnail">
+                <img src="Pictures/F - Frog.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -118,11 +119,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">G</h1>
-                <h3>For </h3>
+                <h3>For Grass</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="" class="img-thumbnail">
+                <img src="Pictures/G - Grass.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -132,11 +133,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">H</h1>
-                <h3>For </h3>
+                <h3>For Horse </h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image  -->
-                <img  class="img-thumbnail">
+                <img src="Pictures/H - Horse.jpg"  class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -146,11 +147,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">I</h1>
-                <h3>For </h3>
+                <h3>For Iguana</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image  -->
-                <img  class="img-thumbnail">
+                <img src="Pictures/I - Iguana.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
