--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body background="gray">
     <main class="container">
         <div class="row">
             <div class="col">
@@ -164,7 +164,7 @@
             </div>
             <div class="col-8">
                 <!-- insert pathway to image -->
-                <img src="" class="img-thumbnail">
+                <img src="/Pictures/J - Jewelry.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -178,7 +178,7 @@
             </div>
             <div class="col-8">
                 <!-- insert pathway to image -->
-                <img src="" class="img-thumbnail">
+                <img src="/Pictures/K - Kangaroo.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -191,7 +191,7 @@
                 <h3>For </h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="/Pictures/L - Lion.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -204,7 +204,7 @@
                 <h3>For </h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="/Pictures/M - mouse.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -213,11 +213,11 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1"></h1>
+                <h1 class="display-1">N</h1>
                 <h3>For </h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="/Pictures/N - Newspaper.jpg" class="img-thumbnail">
             </div>
         </div>
         <hr>
