--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body background="gray">
+<body>
     <main class="container">
         <div class="row">
             <div class="col">
