--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">C</h1>
-                <h3>For Coffee</h3>
+                <h3 class="hAzul">For Coffee</h3>
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">D</h1>
-                <h3>For Duck</h3>
+                <h3 class="hAzul">For Duck</h3>
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">E</h1>
-                <h3>For Elephant</h3>
+                <h3 class="hAzul">For Elephant</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
@@ -188,7 +188,7 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1">k</h1>
+                <h1 class="display-1">l</h1>
                 <h3>For </h3>
             </div>
             <div class="col-8">
