--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">A</h1>
-                <h3>For Appa</h3>
+                <h3 class ="blue">For Appa</h3>
             </div>
             <div class="col-8">
                 <img src="Pictures/a-appa.jpg" class="img-thumbnail">
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">B</h1>
-                <h3>For Beans</h3>
+                <h3 class ="blue">For Beans</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">C</h1>
-                <h3>For Coffee</h3>
+                <h3 class ="blue">For Coffee</h3>
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
@@ -231,7 +231,7 @@
                 <h3>For </h3>
             </div>
             <div class="col-8">
-                <img src="/Pictures/O.webp" class="img-thumbnail">
+                <img src="/Pictures/O.jpeg" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -368,5 +368,6 @@
         <hr>
         <hr>
     </main>
+    <script src="script.js"> </script>
 </body>
 </html>
