--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         <div class="row">
             <div class="col-12">
                 <!-- Enter each persons name in place of the "Insert Name Here" below -->
-                <h5>Andres Gomez Vasquez</h5>
-                <h5>Jose Castañeda</h5>
-                <h5>Julieth Vela</h5>
-                <h5>Marlon Quintero</h5> 
+                <h5 id="name1" >Andres Gomez Vasquez</h5>
+                <h5 id="name2" >Jose Castañeda</h5>
+                <h5 id="name3" >Julieth Vela</h5>
+                <h5 id="name4" >Marlon Quintero</h5> 
             </div> 
         </div>
         <br>
+        
         <br>
         <!-- A -->
         <div class="row">
@@ -188,7 +189,7 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1">l</h1>
+                <h1 class="display-1">L</h1>
                 <h3>For </h3>
             </div>
             <div class="col-8">
@@ -368,5 +369,6 @@
         <hr>
         <hr>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
